Implemented POST-query "/settings/emulation_mode"
